# simple-translator

./: CMakeLists.txt  Environment.c  MemoryState.c  README.md  StringBuilder.c  StringTable.c  Token.c  Translator.c  main.c
include/: Environment.h  MemoryState.h  StringBuilder.h  StringTable.h  Token.h  Translator.h
